--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -19,5 +19,6 @@ $font-2: "Space Mono", serif;
 $font-3: "Rubik", serif;
 
 $font-4: "Staatliches", serif;
+$font-5: "Karla", serif;
 
 $background: linear-gradient(135deg, #73fac8, #00bee1);
