--- a/src/sass/_visuals.scss
+++ b/src/sass/_visuals.scss
@@ -128,4 +128,8 @@
   background-color: $color-tertiary-2;
   transform: translateY(-50%);
   color: $color-secondry;
+
+  @include response(tabX) {
+    display: none;
+  }
 }
