--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500&display=swap");
 
 * {
   margin: 0;
@@ -15,11 +16,19 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   scroll-behavior: smooth;
+
+  @include response(tabP) {
+    font-size: 50%;
+  }
+
+  @include response(phoneSMS) {
+    font-size: 47.75%;
+  }
 }
 
 body {
   min-height: 100vh;
-  font-family: $font-3;
+  font-family: $font-5;
   font-weight: 300;
   font-size: 2rem;
   color: $color-tertiary;
