--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -4,6 +4,10 @@
   position: relative;
   border-top: 2px solid;
 
+  @include response(tabX) {
+    padding: 5rem;
+  }
+
   &__heading {
     font-size: 8rem;
     font-weight: 300;
@@ -12,17 +16,34 @@
     padding: 0 0 1rem 1rem;
     margin-bottom: 5rem;
     border-left: 0.3rem solid $color-tertiary-2;
+
+    @include response(tabS) {
+      font-size: 5rem;
+      border-left: 0;
+    }
   }
 
   &__para {
     margin-left: 10rem;
     width: 70rem;
     margin-bottom: 5rem;
+
+    @include response(tabX) {
+      margin-left: 0rem;
+    }
+    @include response(tabS) {
+      width: 100%;
+    }
   }
 
   &__images {
     display: flex;
     justify-content: end;
+    @include response(tabX) {
+      justify-content: flex-start;
+      flex-direction: column;
+      row-gap: 1rem;
+    }
   }
 
   &__img {
@@ -37,12 +58,24 @@
       filter: brightness(1.3);
     }
 
+    @include response(tabX) {
+      border: 0.5rem solid $color-tertiary-2;
+      outline: 1px solid $color-tertiary-2;
+    }
+
     &--1 {
       width: 50rem;
       height: 35rem;
       transform: rotateZ(deg);
       margin-top: -15rem;
       margin-right: 0;
+
+      @include response(tabX) {
+        margin: unset;
+        width: 30rem;
+        height: 20rem;
+        align-self: flex-end;
+      }
     }
 
     &--2 {
@@ -51,6 +84,11 @@
       z-index: 1;
       margin-right: -15rem;
       margin-top: -2rem;
+      @include response(tabX) {
+        margin: unset;
+        width: 30rem;
+        height: 20rem;
+      }
     }
   }
 }
@@ -65,6 +103,11 @@
     align-items: center;
     border-bottom: 0.1rem solid $color-tertiary;
     transition: all 0.5s ease-out;
+
+    @include response(tabP) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     &:hover {
       background-color: $color-secondry-2;
@@ -83,6 +126,11 @@
       width: 50rem;
       font-family: $font-2;
       margin-left: auto;
+
+      @include response(tabP) {
+        margin-left: unset;
+        width: 100%;
+      }
     }
 
     &-icon {
@@ -94,6 +142,10 @@
   &__img {
     width: 25rem;
     height: 16.7rem;
+
+    @include response(tabP) {
+      width: 100%;
+    }
 
     &--1 {
       background: url(../img/P-1.jpg);
@@ -131,4 +183,8 @@
   text-align: end;
   padding: 0 1rem 1rem 0;
   border-right: 0.3rem solid $color-tertiary-2;
+
+  @include response(tabS) {
+    border-right: 0;
+  }
 }
