--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -96,6 +96,10 @@
 .projects {
   margin-top: 10rem;
 
+  @include response(tabS) {
+    margin-top: 0;
+  }
+
   &__project {
     display: flex;
     padding: 3rem;
@@ -103,6 +107,10 @@
     align-items: center;
     border-bottom: 0.1rem solid $color-tertiary;
     transition: all 0.5s ease-out;
+
+    @include response(tabS) {
+      padding: 3rem 0;
+    }
 
     @include response(tabP) {
       flex-direction: column;
